tests/good/30_mixed_types.src
# Test: Mixed types in conditions
void main() {
    int x = 10;
    bool flag = true;
    if flag && x > 5 {
        print_int(1);
    } else {
        print_int(0);
    }
}
