tests/bad/08_type_mismatch.src
# Test: Type mismatch in assignment
void main() {
    int x = true;  # Type mismatch: int = bool
    return x;
}
